--- a/docs/zh/diary/第一章.md
+++ b/docs/zh/diary/第一章.md
@@ -1,12 +1,13 @@
-第一章 信息资源建设概论
-
+# 第一章 信息资源建设概论
+## 信息与信息资源  
 根据成因、作用和形态等方面的差异，经济资源可分为四类：自然资源，人力资源，资本资源，信息资源。（P4）
 
 1.信息具有经济资源的一般特性（P4-5）  
-——有用性（人类需求性）  
-——稀缺性  
-——使用方向的可选择性
+— 有用性（人类需求性）  
+— 稀缺性  
+— 使用方向的可选择性
 
 2.信息为什么会成为一种重要资源？（P5-6）  
 经济增长方式的转变；人类对资源认识的演变和获取资源能力的提高；信息的积累和增长  
-
+## 信息资源的类型和特征  
+信息资源类型的划分标准（）：
