--- a/docs/zh/diary/第一章.md
+++ b/docs/zh/diary/第一章.md
@@ -1,19 +1,76 @@
-# 第一章 信息资源建设概论
+# 信息资源建设  （information resourse development）
 
-## 信息与信息资源
+## 第一章 信息资源建设概论
 
+### 一、信息与信息资源
 根据成因、作用和形态等方面的差异，经济资源可分为四类：自然资源，人力资源，资本资源，信息资源。（P4）
-
-1.信息具有经济资源的一般特性（P4-5）
-— 有用性（人类需求性）
-— 稀缺性
-— 使用方向的可选择性
-
-2.信息为什么会成为一种重要资源？（P5-6）
+1. 信息具有经济资源的一般特性（P4-5）  
+  — 有用性（人类需求性）  
+  — 稀缺性  
+  — 使用方向的可选择性
+2. 信息为什么会成为一种重要资源？（P5-6）  
 经济增长方式的转变；人类对资源认识的演变和获取资源能力的提高；信息的积累和增长
 
-## 信息资源的类型和特征
+### 二、信息资源的类型和特征
 
+#### 信息资源类型
 信息资源类型的划分标准（P10）：综合了信息资源的载体形态、记录手段和生产方式等多方面的特点划分。
 
-（一）实体型信息资源
+1. 实体型信息资源（P10-14）
+    1. 刻写型文献信息资源
+    2. 印刷型文献信息资源
+    3. 缩微型文献信息资源
+    4. 视听型文献信息资源
+
+2. 数字化信息资源(P14-17)
+    1. 网络信息资源
+    2. 单机信息资源
+
+#### 现代信息资源的整体特征与发展趋势
+主要表现为以下几方面：（P17-20）
+1. 数量急剧增长，载体形式多样
+信息资源数量的庞大和载体形式多样，为IRD提供了丰富信息源，但也给信息的鉴别、选择和采集带来了苦难。
+2. 内容重复交叉，分布广泛分散；
+文献内容交叉重复能扩大人们获取文献的几率，但也给识别和使用文献带来困难。
+3. 信息繁杂无序，价值差异明显；
+4. 信息老化加快，文献时效缩短；
+四种以上情形导致文献的较快速老化。
+5. 信息成为资源，竞争共享并存。
+如数字鸿沟的影响。
+
+### 三、信息资源建设
+1. 信息资源建设的涵义（P21-P22）
+信息资源建设是指：人类对处于**无序状态**的各种媒介信息进行**选择、采集、组织和开发**等活动，使之形成可资利用的**信息资源体系**的全过程。
+此定义的内涵有三个方面：
+	1. 信息资源建设针对的是**各种媒介的**的信息，并非仅指数字信息；
+	2. 信息资源建设活动的内容是**对处于无序状态的信息进行选择、采集、组织和开发**。
+	3. 信息资源建设的目的是**形成可资利用的信息资源体系**。
+2. 藏书与藏书建设（P23-24）
+CA：collection acquisition藏书采访
+CD：collection development藏书发展、藏书建设、馆藏发展
+3. 信息资源建设的意义：（P32-34)
+	1. 信息资源建设使无序的信息成为可以利用的重要资源，为社会带来了巨大的财富；
+	2. 信息资源建设促进信息资源的深层次开发和远距离获取，为人们利用信息带来极大的便利；
+	3. 信息资源建设是图书馆核心能力的基础，是图书馆开展服务活动的重要保障；
+	4. 信息资源建设对于我国的经济和社会发展具有特殊重要的意义。
+
+## 第二章 信息资源建设的基本理论
+
+### 一、信息资源建设的支撑理论
+
+#### 系统理论和方法为研究信息资源建设提供了哪些理论指导？（P37-41）
+1. 系统的**整体性原则**是**信息资源共建共享**的方法论基础
+- 系统的整体性原则为信息资源共建共享提供了怎样的启示？
+	1. 必须建立信息资源保障体系；
+	2. 信息资源保障体系必须有明确的系统目标，并保证系统总体的最优化；
+	3. 信息资源保障体系的运行必须与社会环境相适应。
+2. 系统的联系性原则为信息资源体系结构研究提供了理论依据
+- 系统的联系性原则的含义：系统的联系原则是指系统要素之间、系统和环境之间存在着相互联系、相互作用的关系。
+- 系统的联系性原则要求，要提高信息资源系统的功能，不仅要注意提高组成信息资源系统各要素的素质，而且要注意改善信息资源系统的构成、组合状况。
+3. 系统的有序性原则为信息资源组织提供的理论指导
+- 系统的有序性原则的含义：有序性原则是指组成系统的各要素之间相互联系和制约的关系是有规律、有秩序的。
+- 系统的有序性要求图书馆对采集的文献信息资源要依据一定的技术方法和规范，进行加工、整序。经过程序化处理过程，使之成为馆藏信息资源体系中组织化、序列化的组成部分。
+- 有序性原则要求图书馆建立完善的信息检索系统，使图书馆与整个信息资源保障体系所拥有的和可存取的所有信息资源的内容都能够通过这些检索工具和系统全面系统地加以体现。
+4. 系统的动态性原则要求信息资源建设必须适应社会信息需求的变化。
+- 系统的动态性原则的含义
+- 系统的动态性原则给信息资源建设的启示是，在信息资源建设的过程中，要研究信息资源系统在时间上发展变化的趋势和规律，自觉地调整信息资源系统内部结构及其与外部环境的关系。
