refactor: default chinese

--- a/docs/diary/2022-06-10-demo.md
+++ b/docs/diary/2022-06-10-demo.md
@@ -1,14 +1,14 @@
 ---
-title: demo  
+title: 实例  
 sidebar: false  
 date: 2022-06-10 12:09:11  
 permalinkPattern: diary/:year/:month/:day/:slug.html  
-category:
-  - daily
-tag:
-  - happy
+category: 
+  - 日记     
+tag: 
+  - 开心
 ---
 
-# How are you doing
+# 今天做了什么捏
 
-I do not know
+我不道呀
