--- a/docs/en/diary/2022-06-10-demo.md
+++ b/docs/en/diary/2022-06-10-demo.md
@@ -1,14 +1,14 @@
 ---
-title: 实例  
+title: demo  
 sidebar: false  
 date: 2022-06-10 12:09:11  
 permalinkPattern: diary/:year/:month/:day/:slug.html  
-category: 
-  - 日记     
-tag: 
-  - 开心
+category:
+  - daily
+tag:
+  - happy
 ---
 
-# 今天做了什么捏
+# How are you doing
 
-我不道呀
+I do not know
